# AWS_hackathon

./: .gitignore  README.md  invoke_agent.py  kiro-cli.yml
agentcore/: .env.local.example  agentcore.full.json  agentcore.json  agentcore.phase1.json  agentcore.phase2.json  aws-targets.json  aws-targets.json.example
app/LogAnalysisAgent/: agent_factory.py  config.py  corner_cases.py  main.py  pyproject.toml
app/LogAnalysisAgent/memory/: __init__.py  session.py
app/LogAnalysisAgent/prompts/: system_prompt.py
app/LogAnalysisAgent/tools/: __init__.py  cloudwatch_tools.py
docs/: DEMO_GUIDE.md  corner_case_prompts.md  sample_demo_output.md  sample_queries.md
infrastructure/: app.py  cdk.json
scripts/: analyze_rca.py  demo_full_stack.sh  demo_showcase.py  deploy_phase1.sh  deploy_phase2.sh  deploy_phase3.sh  diagnose_deploy.sh  fix_deploy.sh  generate_synthetic_logs.py  seed_cloudwatch_logs.py  setup_aws_targets.sh  setup_cdk.sh  show_errors_table.py
