[project]
name = "log-analysis-agent"
version = "0.1.0"
description = "Production-grade log analysis agent on Amazon Bedrock AgentCore Runtime"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "strands-agents>=0.1.0",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "aws-opentelemetry-distro>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
